syntax = "proto3";

package athena.v1;

import "athena/athena_struct.proto";
import "candlestick_struct.proto";

// GetBacktestRequest
message GetBacktestRequest {
    // Broker configurations.
    Config config = 1;
    // Candlesticks data.
    Candlestick candlesticks = 2;
}

// GetBacktestResponse
message GetBacktestResponse {
    Statistics statistics = 1;
}

service Athena {
    rpc GetBacktest (GetBacktestRequest) returns (GetBacktestResponse);
}